--- a/src/app/checkbox/checkbox.component.html
+++ b/src/app/checkbox/checkbox.component.html
@@ -1,1 +1,66 @@
 
+<body>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+          <div class="card card-signin my-5">
+            <div class="card-body">
+              <h5 class="card-title text-center">Check Box</h5>
+                <div class="form-label-group">
+                    <label for="inputName">
+                        Select all below checkboxes
+                    </label> 
+                    <div class="checkbox">
+                        <label><input type="checkbox" value="">Option 1</label>
+                      </div>
+                      <div class="checkbox">
+                        <label><input type="checkbox" value="">Option 2</label>
+                      </div>
+                      <div class="checkbox disabled">
+                        <label><input type="checkbox" value="">Option 3</label>
+                      </div>
+                      <div class="checkbox disabled">
+                        <label><input type="checkbox" value="">Option 3</label>
+                      </div>
+                      <label for="inputName">
+                        Select the languages that you know?
+                    </label> 
+                    <div class="checkbox">
+                        <label><input type="checkbox" value="">Java</label>
+                      </div>
+                      <div class="checkbox">
+                        <label><input type="checkbox" value="">Sql</label>
+                      </div>
+                      <div class="checkbox">
+                        <label><input type="checkbox" value="">Html</label>
+                      </div>
+                      <div class="checkbox">
+                        <label><input type="checkbox" value="" >Aws</label>
+                      </div>
+                      <label for="inputName">
+                        Confirm Selenium is checked
+                    </label> 
+                    <div class="checkbox">
+                        <label><input type="checkbox" value="">Selenium</label>
+                      </div>
+                      
+                      <label for="inputName">
+                        DeSelect only checked
+                    </label> 
+                    <div class="checkbox">
+                        <label><input type="checkbox" value="">Not Selected
+                        </label>
+                      </div>
+                      <div class="checkbox">
+                        <label><input type="checkbox" value="">Selected
+                        </label>
+                      </div>
+                      
+
+                   </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
