--- a/src/app/droppable/droppable.component.html
+++ b/src/app/droppable/droppable.component.html
@@ -1,3 +1,19 @@
-
-    
+<body>
+    <div class="container">
+        <div class="row">
+          <div class="col-sm-12 col-md-8 col-lg-8 mx-auto">
+            <div class="card card-signin my-5">
+              <div class="card-body">
+                <h5 class="card-title text-center">Droppable</h5>
+    <div class="example-boundary">
+        <div class="example-box" cdkDragBoundary=".example-boundary" cdkDrag>
+          I can only be drag and drop within the dotted container
+        </div>
+      </div>
+    </div>
+</div>
+</div>
+</div>
+</div>
+</body> 
   
