--- a/src/app/edit/edit.component.html
+++ b/src/app/edit/edit.component.html
@@ -1,1 +1,36 @@
-<p>This is edit component!</p>
+<body>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+          <div class="card card-signin my-5">
+            <div class="card-body">
+              <h5 class="card-title text-center">Edit Text</h5>
+                <div class="form-label-group">
+                 <label for="inputName">
+                    Enter your email address</label>
+                  <input type="name"id="name" class="form-control" placeholder="name" required autofocus>
+                </div>
+                <div class="form-label-group">
+                 <label for="inputPassword">
+                    Append a text and press keyboard tab</label>
+                  <input type="name" value="append" class="form-control" required autofocus>
+                </div>
+                <div class="form-label-group">
+                    <label for="inputName">Get default text entered</label>
+                     <input type="name"id="name" class="form-control" value="kushik" required autofocus>
+                   </div>
+                   <div class="form-label-group">
+                    <label for="inputName">Clear the text</label>
+                     <input type="name"id="name" class="form-control" value="name" required autofocus>
+                   </div>
+                   <div class="form-label-group">
+                    <label for="inputName">
+                        Confirm that edit field is disabled</label>
+                     <input type="name"id="name" disabled="true" class="form-control" value="name" required autofocus>
+                   </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
