--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,38 +1,43 @@
-<div class="container">
+<div class="container justify-content-center  ">
     <div class="row justify-content-center">
 <!-- <app-edit></app-edit> -->
  
     <!-- <div class="col-sm-3 justify-content-center"> -->
-  <mat-card class="col-sm-3 example bg-warning col-sm-3"style="width: 20rem; height: 20rem;" routerLink="/edit">
+  <mat-card class="col-sm-3 example "style="width: 8rem; height: 8rem;" routerLink="/edit">
+   
       <div class="row justify-content-center align-items-center">
-           <i class="material-icons text-white"style="font-size: 250px">edit</i>
+           <i class="material-icons text-black"style=" font-size: 100px">edit</i>
+           <span>Edit</span>
      </div>
     </mat-card>
     <!-- </div> -->
 <!-- <app-button></app-button> -->
 
     <!-- <div class="col-sm-3 justify-content-center"> -->
-      <mat-card class="example bg-warning col-sm-3"style="width: 20rem; height: 20rem;">
+      <mat-card class="example  col-sm-3"style="width: 8rem; height: 8rem;" routerLink="/button">
           <div class="row justify-content-center align-items-center">
-               <i class="material-icons text-white"style="font-size: 250px">power_settings_new</i>
+               <i class="material-icons text-black"style=" font-size: 100px">power_settings_new</i>
+               <span>Button</span>
          </div>
         </mat-card>
     <!-- </div> -->
 <!-- <app-hiperlink></app-hiperlink>  -->
  
     <!-- <div class="col-sm-3 justify-content-center"> -->
-      <mat-card class="example bg-warning col-sm-3"style="width: 20rem; height: 20rem;">
+      <mat-card class="example  col-sm-3"style="width: 8rem; height: 8rem;" routerLink="/hiperlink">
           <div class="row justify-content-center align-items-center">
-               <i class="material-icons text-white"style="font-size: 250px">link_off</i>
+               <i class="material-icons text-black"style=" font-size: 100px">link_off</i>
+               <span>Hiperlink</span>
           </div>
         </mat-card>
     <!-- </div>  -->
 <!-- <app-image></app-image> -->
  
     <!-- <div class="col-sm-3 justify-content-center"> -->
-      <mat-card class="col-sm-3 example bg-warning col-sm-3"style="width: 20rem; height: 20rem;">
+      <mat-card class="example  col-sm-3"style="width: 8rem; height: 8rem;" routerLink="/image">
           <div class="row justify-content-center align-items-center">
-               <i class="material-icons text-white"style="font-size: 250px">local_florist</i>
+               <i class="material-icons text-black"style=" font-size: 100px">local_florist</i>
+               <span>Image</span>
          </div>
         </mat-card>
     </div>
@@ -41,36 +46,40 @@
 <!-- <app-dropdown></app-dropdown> -->
  
     <!-- <div class="col-sm-3 justify-content-center"> -->
-    <mat-card class="example bg-warning col-sm-3"style="width: 20rem; height: 20rem;">
+    <mat-card class="example  col-sm-3"style="width: 8rem; height: 8rem;" routerLink="/dropdown">
         <div class="row justify-content-center align-items-center">
-             <i class="material-icons text-white"style="font-size: 250px">arrow_drop_down</i>
+             <i class="material-icons text-black"style=" font-size: 100px">arrow_drop_down</i>
+             <span>Dropdown</span>
        </div>
       </mat-card>
     <!-- </div> -->
 <!-- <app-radiobutton></app-radiobutton> -->
  
     <!-- <div class="col-sm-3 justify-content-center"> -->
-    <mat-card class="example bg-warning col-sm-3"style="width: 20rem; height: 20rem;">
+    <mat-card class="example  col-sm-3"style="width: 8rem; height: 8rem;" routerLink="/radiobutton">
         <div class="row justify-content-center align-items-center">
-             <i class="material-icons text-white"style="font-size: 250px">radio</i>
+             <i class="material-icons text-black"style=" font-size: 100px">radio</i>
+             <span>Radiobutton</span>
        </div>
       </mat-card>
     <!-- </div> -->
 <!-- <app-checkbox></app-checkbox> -->
  
     <!-- <div class="col-sm-3 justify-content-center"> -->
-    <mat-card class="example bg-warning col-sm-3" style="width: 20rem; height: 20rem;">
+    <mat-card class="example  col-sm-3" style="width: 8rem; height: 8rem;" routerLink="/checkbox">
         <div class="row justify-content-center align-items-center">
-             <i class="material-icons text-white"style="font-size: 250px">check_box</i>
+             <i class="material-icons text-black"style=" font-size: 100px">check_box</i>
+             <span>Checkbox</span>
        </div>
       </mat-card>
       <!-- </div> -->
 <!-- <app-table></app-table> -->
  
     <!-- <div class="col-sm-3 justify-content-center"> -->
-      <mat-card class="example bg-warning col-sm-3"style="width: 20rem; height: 20rem;">
+      <mat-card class="example  col-sm-3"style="width: 8rem; height: 8rem;" routerLink="/table">
     <div class="row justify-content-center align-items-center">
-         <i class="material-icons text-white"style="font-size: 250px">table_chart</i>
+         <i class="material-icons text-black"style=" font-size: 100px">table_chart</i>
+         <span>Table</span>
     </div> 
       </mat-card>
     <!-- </div> -->
@@ -78,36 +87,40 @@
 <!-- <app-alert></app-alert> -->
 <div class="row justify-content-center box-top">
     <!-- <div class="col-sm-3 justify-content-center"> -->
-      <mat-card class="example bg-warning col-sm-3"style="width: 20rem; height: 20rem;">
+      <mat-card class="example  col-sm-3"style="width: 8rem; height: 8rem;" routerLink="/alert">
           <div class="row justify-content-center align-items-center">
-               <i class="material-icons text-white"style="font-size: 250px">error</i>
+               <i class="material-icons text-black"style=" font-size: 100px">error</i>
+               <span>Alert</span>
          </div>
         </mat-card>
     <!-- </div> -->
 <!-- <app-frame></app-frame> -->
  
     <!-- <div class="col-sm-3 justify-content-center"> -->
-    <mat-card class="example bg-warning col-sm-3"style="width: 20rem; height: 20rem;">
+    <mat-card class="example  col-sm-3"style="width: 8rem; height: 8rem;" routerLink="/frame">
         <div class="row justify-content-center align-items-center">
-             <i class="material-icons text-white"style="font-size: 250px">filter_frames</i>
+             <i class="material-icons text-black"style=" font-size: 100px">filter_frames</i>
+             <span>Frame</span>
        </div>
       </mat-card>
     <!-- </div> -->
 <!-- <app-window></app-window> -->
  
     <!-- <div class="col-sm-3 justify-content-center"> -->
-    <mat-card class="example bg-warning col-sm-3"style="width: 20rem; height: 20rem;">
+    <mat-card class="example  col-sm-3"style="width: 8rem; height: 8rem;" routerLink="/window">
         <div class="row justify-content-center align-items-center">
-             <i class="material-icons text-white"style="font-size: 250px">laptop_windows</i>
+             <i class="material-icons text-black"style=" font-size: 100px">laptop_windows</i>
+             <span>Window</span>
        </div>
       </mat-card>
     <!-- </div> -->
 <!-- <app-calender></app-calender> -->
  
     <!-- <div class="col-sm-3 justify-content-center"> -->
-    <mat-card class="example bg-warning col-sm-3"style="width: 20rem; height: 20rem;">
+    <mat-card class="example  col-sm-3"style="width: 8rem; height: 8rem;" routerLink="/calender">
         <div class="row justify-content-center align-items-center">
-             <i class="material-icons text-white"style="font-size: 250px">calendar_today</i>
+             <i class="material-icons text-black"style=" font-size: 100px">calendar_today</i>
+             <span>Calender</span>
        </div>
       </mat-card>
     <!-- </div> -->
@@ -115,27 +128,33 @@
 <!-- <app-draggable></app-draggable> -->
 <div class="row justify-content-center box-top">
     <!-- <div class="col-sm-3 justify-content-center"> -->
-    <mat-card class="example bg-warning col-sm-3"style="width: 20rem; height: 20rem;">
+    <mat-card class="example  col-sm-3"style="width: 8rem; height: 8rem;" routerLink="/draggable">
         <div class="row justify-content-center align-items-center">
-             <i class="material-icons text-white"style="font-size: 250px">drag_indicator</i>
+             <i class="material-icons text-black"style=" font-size: 100px">drag_indicator</i>
+             <span>Draggable</span>
+
        </div>
       </mat-card>
     <!-- </div> -->
 <!-- <app-droppable></app-droppable> -->
  
     <!-- <div class="col-sm-3 justify-content-center"> -->
-  <mat-card class="example bg-warning col-sm-3"style="width: 20rem; height: 20rem;">
+  <mat-card class="example  col-sm-3"style="width: 8rem; height: 8rem;" routerLink="/droppable">
       <div class="row justify-content-center align-items-center">
-           <i class="material-icons text-white"style="font-size: 250px">arrow_drop_down_circle</i>
+           <i class="material-icons text-black"style=" font-size: 100px">arrow_drop_down_circle</i>
+           <span>Droppable</span>
+
      </div>
     </mat-card>
     <!-- </div> -->
 <!-- <app-selectable></app-selectable> -->
  
     <!-- <div class="col-sm-3 justify-content-center"> -->
-      <mat-card class="example bg-warning col-sm-3"style="width: 20rem; height: 20rem;">
+      <mat-card class="example  col-sm-3"style="width: 8rem; height: 8rem;" routerLink="/selectable">
           <div class="row justify-content-center align-items-center">
-               <i class="material-icons text-white"style="font-size: 250px">photo_size_select_actual</i>
+               <i class="material-icons text-black"style=" font-size: 100px">photo_size_select_actual</i>
+             <span>Selectable</span>
+
          </div>
         </mat-card>
     <!-- </div> -->
@@ -143,9 +162,11 @@
 
  
     <!-- <div class="col-sm-3 justify-content-center"> -->
-    <mat-card class="example bg-warning col-sm-3"style="width: 20rem; height: 20rem;">
+    <mat-card class="example  col-sm-3"style="width: 8rem; height: 8rem;" routerLink="/sortable">
         <div class="row justify-content-center align-items-center">
-             <i class="material-icons text-white"style="font-size: 250px">sort</i>
+             <i class="material-icons text-black"style=" font-size: 100px">sort</i>
+             <span>Sortable</span>
+
        </div>
       </mat-card>
     <!-- </div> -->
@@ -153,36 +174,42 @@
 <!-- <app-autocomplete></app-autocomplete> -->
 <div class="row justify-content-center box-top">
     <!-- <div class="col-sm-3 justify-content-center"> -->
-    <mat-card class="example bg-warning col-sm-3"style="width: 20rem; height: 20rem;">
+    <mat-card class="example  col-sm-3"style="width: 8rem; height: 8rem;" routerLink="/autocomplete">
         <div class="row justify-content-center align-items-center">
-             <i class="material-icons text-white"style="font-size: 250px">autorenew</i>
+             <i class="material-icons text-black"style=" font-size: 100px">autorenew</i>
+             <span>Autocomplete</span>
+
        </div>
       </mat-card>
     <!-- </div> -->
 <!-- <app-downloadfiles></app-downloadfiles> -->
  
     <!-- <div class="col-sm-3 justify-content-center"> -->
-    <mat-card class="example bg-warning col-sm-3"style="width: 20rem; height: 20rem;">
+    <mat-card class="example  col-sm-3"style="width: 8rem; height: 8rem;" routerLink="/downloadfiles">
         <div class="row justify-content-center align-items-center">
-             <i class="material-icons text-white"style="font-size: 250px">cloud_download</i>
+             <i class="material-icons text-black"style=" font-size: 100px">cloud_download</i>
+             <span>Downloadfiles</span>
+
        </div>
     </mat-card>
     <!-- </div> -->
 <!-- <app-uploadfiles></app-uploadfiles> -->
  
     <!-- <div class="col-sm-3 justify-content-center"> -->
-      <mat-card class="example bg-warning col-sm-3"style="width: 20rem; height: 20rem;">
+      <mat-card class="example  col-sm-3"style="width: 8rem; height: 8rem;" routerLink="/uploadfiles">
           <div class="row justify-content-center align-items-center">
-               <i class="material-icons text-white"style="font-size: 250px">cloud_upload</i>
+               <i class="material-icons text-black"style=" font-size: 100px">cloud_upload</i>
+               <span>Uploadfiles</span>  
          </div>
         </mat-card>
     <!-- </div> -->
 <!-- <app-tooltip></app-tooltip> -->
  
     <!-- <div class="col-sm-3 justify-content-center"> -->
-    <mat-card class="example bg-warning col-sm-3"style="width: 20rem; height: 20rem;">
+    <mat-card class="example  col-sm-3"style="width: 8rem; height: 8rem;" routerLink="/tooltip">
         <div class="row justify-content-center align-items-center">
-             <i class="material-icons text-white"style="font-size: 250px">touch_app</i>
+             <i class="material-icons text-black"style=" font-size: 100px">touch_app</i>
+             <span>Tooltip</span>
        </div>
       </mat-card>
     <!-- </div> -->
@@ -190,18 +217,20 @@
 <!-- <app-waitfordisappear></app-waitfordisappear> -->
 <div class="row justify-content-center box-top">
     <!-- <div class="col-sm-3 justify-content-center"> -->
-    <mat-card class="example bg-warning col-sm-3"style="width: 20rem; height: 20rem;">
+    <mat-card class="example  col-sm-3"style="width: 8rem; height: 8rem;" routerLink="/waitfordisappear">
         <div class="row justify-content-center align-items-center">
-             <i class="material-icons text-white"style="font-size: 250px">visibility_off</i>
+             <i class="material-icons text-black"style=" font-size: 100px">visibility_off</i>
+             <span>waitfordisappear</span>
        </div>
       </mat-card>
     <!-- </div> -->
 <!-- <app-waittoapper></app-waittoapper> -->
  
     <!-- <div class="col-sm-3 justify-content-center"> -->
-    <mat-card class="example bg-warning col-sm-3"style="width: 20rem; height: 20rem;">
+    <mat-card class="example  col-sm-3"style="width: 8rem; height: 8rem;" routerLink="/waittoapper">
         <div class="row justify-content-center align-items-center">
-             <i class="material-icons text-white"style="font-size: 250px">visibility</i>
+             <i class="material-icons text-black"style=" font-size: 100px">visibility</i>
+             <span>waittoapper</span>
        </div>
       </mat-card>
     <!-- </div> -->
@@ -209,18 +238,20 @@
 <!-- <app-waitfortextchange></app-waitfortextchange> -->
  
     <!-- <div class="col-sm-3 justify-content-center"> -->
-      <mat-card class="example bg-warning col-sm-3"style="width: 20rem; height: 20rem;">
+      <mat-card class="example  col-sm-3"style="width: 8rem; height: 8rem;" routerLink="/waitfortextchange">
           <div class="row justify-content-center align-items-center">
-               <i class="material-icons text-white"style="font-size: 250px">track_changes</i>
+               <i class="material-icons text-black"style=" font-size: 100px">track_changes</i>
+               <span>waitfortextchange</span>
           </div>
         </mat-card>
     <!-- </div> -->
 <!-- <app-waitforalert></app-waitforalert> -->
  
     <!-- <div class="col-sm-3 justify-content-center"> -->
-      <mat-card class="example bg-warning col-sm-3"style="width: 20rem; height: 20rem;">
+      <mat-card class="example  col-sm-3"style="width: 8rem; height: 8rem;" routerLink="/waitforalert">
           <div class="row justify-content-center align-items-center">
-               <i class="material-icons text-white"style="font-size: 250px">add_alert</i>
+               <i class="material-icons text-black"style=" font-size: 100px">add_alert</i>
+               <span>wait for alert</span>
          </div>
         </mat-card>
     <!-- </div> -->
@@ -228,9 +259,10 @@
 <!-- <app-mousehover></app-mousehover> -->
 <div class="row box-top">
     <!-- <div class="col-sm-3 justify-content-center"> -->
-    <mat-card class="example bg-warning col-sm-3"style="width: 20rem; height: 20rem;">
+    <mat-card class="example  col-sm-3"style="width: 8rem; height: 8rem;" routerLink="/mousehover">
         <div class="row justify-content-center align-items-center">
-             <i class="material-icons text-white"style="font-size: 250px">mouse</i>
+             <i class="material-icons text-black"style=" font-size: 100px">mouse</i>
+             <span>Mousehover</span>
        </div>
       </mat-card>
     <!-- </div> -->
@@ -238,9 +270,10 @@
 <!-- <app-advanced-web-tables></app-advanced-web-tables> -->
  
     <!-- <div class="col-sm-3 justify-content-center"> -->
-      <mat-card class="example bg-warning col-sm-3"style="width: 20rem; height: 20rem;">
+      <mat-card class="example  col-sm-3"style="width: 8rem; height: 8rem;" routerLink="/advanced-web-tables">
           <div class="row justify-content-center align-items-center">
-               <i class="material-icons text-white"style="font-size: 250px">sort_by_alpha</i>
+               <i class="material-icons text-black"style=" font-size: 100px">sort_by_alpha</i>
+               <span>advanced-web-tables</span>
          </div>
         </mat-card>
       <!-- </div> -->
