--- a/src/app/radiobutton/radiobutton.component.html
+++ b/src/app/radiobutton/radiobutton.component.html
@@ -1,2 +1,75 @@
 
-  
+ <body>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+          <div class="card card-signin my-5">
+            <div class="card-body">
+              <h5 class="card-title text-center">Radio Button</h5>
+                <div class="form-label-group">
+                 <label for="inputName">
+                    Are you enjoying the classes?
+                  </label> 
+                  <div class="radio">
+                    <label for="Unchecked">
+                       NO                            
+                     <input type="radio"id="name" class="form-control" placeholder="name" required autofocus>
+                      </label>
+                  </div> 
+                  <div class="radio">
+                      <label for="Unchecked">
+                        Yes
+                                                    
+                       <input type="radio"id="name" class="form-control" placeholder="name" required autofocus>
+                        </label>
+                  </div>
+                     </div>
+                <div class="form-label-group">
+                    <label for="inputName">
+                        Find default selected radio button?
+                      </label> 
+                      <div class="radio">
+                      <label for="Unchecked">
+                        Unchecked
+                                                    
+                       <input type="radio"id="name" class="form-control" placeholder="name" required autofocus>
+                        </label>
+                    </div> 
+                    <div class="radio">
+                        <label for="Unchecked">
+                          Unchecked
+                                                      
+                         <input type="radio"id="name" class="form-control" placeholder="name" required autofocus>
+                          </label>
+                    </div>
+            </div>
+                <div class="form-label-group">
+                    <label for="inputName">
+                        Select your age group (Only if choice wasn't selected)
+                      </label> 
+                      <div class="radio">
+                      <label for="inputName">
+                        1 - 20 years                          
+                                                  
+                       <input type="radio"id="name" class="form-control" placeholder="name" required autofocus>
+                        </label> </div>
+                        <div class="radio">
+                        <label for="inputName">
+                           21 - 40 years  
+                                                      
+                          <input type="radio"id="name" class="form-control" placeholder="name" required autofocus>
+                           </label>
+                        </div>
+                        <div class="radio">
+                           <label for="inputName">
+                            41 - 100 years  
+                            
+                          <input type="radio"id="name" class="form-control" placeholder="name" required autofocus>
+                           </label></div>
+                   </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body> 
