--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -1,3 +1,69 @@
 
+    <body>
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-9 col-md-9 col-lg-8 mx-auto">
+              <div class="card card-signin my-5">
+                <div class="card-body">
+                  <h5 class="card-title text-center">Table</h5>
+                    <div class="form-label-group">
+                        <table class="table">
+                            <thead>
+                              <tr>
+                                <th>Firstname</th>
+                                <th>Lastname</th>
+                                <th>Email</th>
+                                <th>Present/Absent</th>
+                              </tr>
+                            </thead>
+                            <tbody>
+                              <tr>
+                                <td>Don</td>
+                                <td>Rocky</td>
+                                <td>john@example.com</td>
+                                <td><label><input type="checkbox" value="">Selected
+                                </label></td>
+                              </tr>
+                              <tr>
+                                <td>Bhai</td>
+                                <td>Mary</td>
+                                <td>mary@example.com</td>
+                                <td><label><input type="checkbox" value="">Selected
+                                </label></td>
+                              </tr>
+                              <tr>
+                                <td>July</td>
+                                <td>soole</td>
+                                <td>july@example.com</td>
+                                <td><label><input type="checkbox" value="">Selected
+                                </label></td>
+                              </tr>
+                            </tbody>
+                        </table>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        </div>
+      
     
-  
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-9 col-md-9 col-lg-8 mx-auto">
+              <div class="card card-signin my-5">
+                <div class="card-body">
+                  <h5 class="card-title text-center"></h5>
+                    <div class="form-label-group">
+                        <h5>Get the count of number of colums</h5>
+                        <h5>Get the count of number of rows</h5>
+                        <h5>Get the progress value of 'Learn to interact with Elements</h5>
+                        <h5>Check the vital task for the least completed progress.
+                        </h5>
+                    </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          </div>
+        </body>
