--- a/src/app/waitforalert/waitforalert.component.html
+++ b/src/app/waitforalert/waitforalert.component.html
@@ -1,1 +1,22 @@
+<body>
 
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+          <div class="card card-signin my-5">
+            <div class="card-body">
+              <h5 class="card-title text-center">Wait for Alert</h5>
+                <div #alert class="alert alert-primary " role="alert">
+                 <label for="inputName">
+                  Click the button to display a alert box</label><br/>
+                  <div #alert class="alert alert-primary " role="alert">
+                        <button (click)="mybom()">Wait for 5 seconds</button>
+                   </div>
+                  </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    
+  </body>
