--- a/src/app/alert/alert.component.html
+++ b/src/app/alert/alert.component.html
@@ -1,9 +1,42 @@
-<div class="row">
-  <div class="col-sm">
-    <mat-card class="example bg-warning"style="width: 20rem; height: 20rem;">
-        <div class="row justify-content-center align-items-center">
-             <i class="material-icons text-white"style="font-size: 250px">error</i>
-       </div>
-      </mat-card>
+
+<body>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+        <div class="card card-signin my-5">
+          <div class="card-body">
+            <h5 class="card-title text-center">Alert</h5>
+              <div #alert class="alert alert-primary " role="alert">
+               <label for="inputName">
+                Click the button to display a alert box</label><br/>
+                  <button (click)="myFunction1()">Alert Box</button>
+              </div>
+              <div #alert class="alert alert-primary " role="alert">
+                <label for="inputName">
+                  Click the button to display a alert box</label><br/>
+                    <button (click)="myFunction2()">Conform Box</button>
+              </div>
+              <div #alert class="alert alert-primary " role="alert">
+                <label for="inputName">
+                  Click the button to display a alert box</label><br/>
+                    <button (click)="myFunction3()">prompt Box</button>
+                 </div>
+                 <div #alert class="alert alert-primary " role="alert">
+                  <label for="inputName">
+                    Click the button to learn line-breaks in an alert</label><br/>
+                      <button (click)="myFunction4()">Line Breaks</button>
+                 </div>
+                 <div #alert class="alert alert-primary " role="alert">
+                  <label for="inputName">
+                    Click the below button and click OK.
+                  </label><br/>
+                      <button (click)="myFunction5()">Sweet Box</button>
+                </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-</div>
+  
+</body>
