--- a/src/app/calender/calender.component.html
+++ b/src/app/calender/calender.component.html
@@ -1,1 +1,20 @@
-s
+<body>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+          <div class="card card-signin my-5">
+            <div class="card-body">
+              <h5 class="card-title text-center">calender</h5>
+              <label for="birthday">Select 10th day of following month:</label><br/>
+              <input type="date" id="birthday" name="birthday">
+              <br/>
+              
+              
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    
+  </body>  
