--- a/src/app/downloadfiles/downloadfiles.component.html
+++ b/src/app/downloadfiles/downloadfiles.component.html
@@ -1,1 +1,22 @@
-s
+
+<body>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+          <div class="card card-signin my-5">
+            <div class="card-body">
+              <h5 class="card-title text-center">download</h5>
+              <a [href]="fileUrl" download="file.xlsx">Download Excel</a><br/>
+<a [href]="fileUrl" download="file.pdf">Download pdf</a><br/>
+<a [href]="fileUrl" download="file.txt">Download text</a><br/>
+
+              
+              
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    
+  </body>  
