--- a/src/app/image/image.component.html
+++ b/src/app/image/image.component.html
@@ -1,1 +1,34 @@
-
+<body>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+          <div class="card card-signin my-5">
+            <div class="card-body">
+              <h5 class="card-title text-center">IMAGE</h5>
+                <div class="form-label-group">
+                 <h5>
+                    Click on this image to go home page</h5>
+        
+                        <a href="http://localhost:4200/" class="material-icons text-black"style=" font-size: 100px">laptop_windows</a>
+                        
+                
+                </div>
+                <div class="form-label-group">
+                 <h5>
+                    Am I Broken Image?</h5>
+                    <i class="material-icons text-primary"style=" font-size: 100px">
+                        broken_image
+                        </i>
+                </div>
+                <div class="form-label-group">
+                    <h5>Click me using Keyboard or Mouse
+                    </h5>
+                    
+                    <a href="http://localhost:4200/" class="material-icons text-black"style=" font-size: 100px">keyboard</a>
+                   </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
