--- a/src/app/uploadfiles/uploadfiles.component.html
+++ b/src/app/uploadfiles/uploadfiles.component.html
@@ -1,2 +1,21 @@
+<body>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+          <div class="card card-signin my-5">
+            <div class="card-body">
+              <h5 class="card-title text-center">upload files</h5>
+              
+<input type="file" id="myFile">
+              <br/>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    
+  </body>  
+
 
     
